# suit-rs

./: .rusty-hook.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
cose-minicbor/: Cargo.toml
cose-minicbor/src/: cose.rs  crypto.rs  keys.rs  lib.rs  multitype.rs  verify.rs
cose-minicbor/tests/: tests.rs
cose-minicbor/tests/hmac/: mod.rs
cose-minicbor/tests/hmac/diags/: mac_hs256_a128kw.edn
cose-minicbor/tests/hmac0/: mod.rs  test_mac0_hs256.rs  test_mac0_hs256_64.rs
cose-minicbor/tests/hmac0/diags/: mac0_hs256.edn
cose-minicbor/tests/sign/diags/: sign_ed25519.edn
cose-minicbor/tests/sign1/: test_sign1_es256_detached.rs  test_sign1_hss.rs
cose-minicbor/tests/sign1/diags/: sign1_es256.edn  sign1_hss_lms.edn
cose_minicbor/: Cargo.toml  README.md
cose_minicbor/src/: common.rs  cose.rs  cose_keys.rs  cose_recipient.rs  crypto.rs  errors.rs  keys.rs  lib.rs  multitype.rs  verify_mac.rs  verify_sign.rs
cose_minicbor/src/hmac/: cose_struct.rs  mod.rs  verify_mac.rs
cose_minicbor/src/keys/: ed25519.rs  hss_lms.rs  mod.rs  p256.rs
cose_minicbor/src/sign/: cose_struct.rs  mod.rs  verify_sign.rs
cose_minicbor/src/verif_keys/: ed25519.rs  hss_lms.rs  mod.rs  p256.rs
cose_minicbor/tests/hmac/: mod.rs  test_hmac_a128kw.rs  test_hmac_a256kw.rs  test_hmac_ecdh_es_a256.rs
cose_minicbor/tests/hmac/diags/: mac_hs256_a256kw.edn
cose_minicbor/tests/hmac0/: mod.rs  test_mac0_hs256.rs  test_mac0_hs256_64.rs
cose_minicbor/tests/hmac0/diags/: mac0_hs256_64.edn
cose_minicbor/tests/sign/: mod.rs  test_sign_ed25519.rs
cose_minicbor/tests/sign1/: mod.rs  test_sign1_es256_detached.rs  test_sign1_hss.rs
examples/: demo.rs
src/: bstr_struct.rs  cbor_iter.rs  errors.rs  flat_ops.rs  flat_seq.rs  flat_seq_decode.rs  handler.rs  lazycbor.rs  lib.rs  manifest.rs  raw_input.rs  suit_cose.rs  suit_debug_log.rs  suit_decode.rs  suit_encode.rs  suit_macros.rs  suit_manifest.rs  validators.rs
suit-cbor/: Cargo.toml
suit-cbor/src/: bstr_struct.rs  cbor_iter.rs  lib.rs
suit-rs/: Cargo.toml
suit-rs/examples/: demo.rs
suit-rs/src/: errors.rs  suit_decode.rs  suit_encode.rs  suit_manifest.rs
suit-rs/tests/test0/: test_example_0.rs
suit-rs/tests/test1/: example_1.edn  test_example_1.rs
suit_cbor/: Cargo.toml  README.md
suit_cbor/src/: bstr_struct.rs  cbor_iter.rs  errors.rs  lib.rs  suit_macros.rs
suit_validator/: Cargo.toml  README.md
suit_validator/examples/: demo.rs
suit_validator/src/: crypto.rs  flat_seq.rs  handler.rs  lib.rs  suit_decode.rs  suit_manifest.rs
suit_validator/tests/: setup.rs  tests.rs
suit_validator/tests/failure/: failures.rs  mod.rs
suit_validator/tests/test0/: example_0.edn  test_example_0.rs
suit_validator/tests/test1/: test_example_1.rs
tests/: decode.rs  tests.rs
tests/cbor/: suit_manifest_exp0.cbor  suit_manifest_exp0.md  suit_manifest_expID.md  suit_manifest_expU.md
tests/test0/: mod.rs  test_example_0.rs
tests/test1/: example_1.edn  mod.rs  test_example_1.rs
