[package]
name = "cose_minicbor"
version = "0.1.0"
edition = "2024"
authors = ["leduclean"]
description = "no_std-friendly Rust crate for decoding and verifying COSE (CBOR Object Signing and Encryption) messages with optional cryptographic backends."
repository = "https://github.com/leduclean/suit-rs"
homepage = "https://github.com/leduclean/suit-rs"
documentation = "https://docs.rs/cose_minicbor"
license = "MIT"
keywords = ["cbor", "cose", "no_std", "iot", "embedded"]
categories = ["cryptography", "embedded", "serialization", "security"]
readme = "README.md"

[features]
default = ["hmac", "decrypt", "es256", "sha256"]

# Authentification
es256 = ["p256"]
ed25519 = ["ed25519-dalek"]
hss_lms = ["hbs-lms"]

# Symmetric
hmac256 = ["hmac", "decrypt"]
a128kw = ["aes-kw"]
a256kw = ["aes-kw"]

# Key Exchange 
# curves for DH 
ecdh_p256 = ["p256"]
ecdh_p521 = ["p521"]
ecdh_es = ["ecdh_p256"]

# Digest
sha256 = ["sha2"]
sha384 = ["sha2"]
sha512 = ["sha2"]

# MTI Verification Profile sets

# HMAC 
suit-sha256-hmac = ["sha256","hmac256"]
suit-sha256-hmac-a128kw = ["sha256","hmac256","a128kw"]
suit-sha256-hmac-a256kw = ["sha256","hmac256","a256kw"]
suit-sha256-hmac-ecdh_es-a256kw = ["sha256", "hmac256", "ecdh_es", "a256kw"]

# Sign
suit-sha256-es256 = ["sha256","es256"]
suit-sha256-ed25519 = ["sha256","ed25519"]
suit-sha256-hsslms = ["sha256","hss_lms"]

# Recipient 
decrypt = []

[dependencies]
minicbor = { version = "2.1.1", default-features = false, features = ["derive"] }
minicbor-adapters = { version = "0.0.8", default-features = false }
suit_cbor = { version = "0.1.0", default-features = false}
cbor-macro = { version = "0.1.0", default-features = false }
cboritem = { version = "0.1.3", default-features = false }
cbor-diag = { version = "0.1.12", default-features = false }

thiserror = { version = "2.0.17", default-features = false }
heapless = { version = "0.9.1", default-features = false }
hex-literal = { version = "1.0.0", default-features = false }

# Symmetric crypto
hmac = { version = "0.12.1", default-features = false, optional = true }
aes-kw = { version = "0.2.1", default-features = false, optional = true }

# EC cryptography
p256 = { version = "0.13.2", features = ["ecdsa","ecdh"], default-features = false, optional = true }
p521 = { version = "0.13.3", features = ["ecdh"], default-features = false, optional = true }
ed25519-dalek = { version = "2.2.0", default-features = false, optional = true }

# HSS/LMS
hbs-lms = { version = "0.1.1", default-features = false, optional = true }

# Digests / HKDF
sha2 = { version = "0.10.9", default-features = false, optional = true }
sha3 = { version = "0.10.8", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
