[package]
name = "suit_cbor"
version = "0.1.0"
edition = "2024"
description = "Lightweight no_std utilities for lazy CBOR decoding"
license = "MIT"
repository = "https://github.com/leduclean/suit-rs"
documentation = "https://docs.rs/suit_cbor"
readme = "README.md"
keywords = ["cbor", "no_std", "embedded", "suit", "cose"]
categories = ["encoding", "no-std", "embedded"]

[dependencies]
minicbor = { version = "2.1.1", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.17", default-features = false }

cbor-macro = { version = "0.1.0", default-features = false }
cboritem = { version = "0.1.3", default-features = false }
