[package]
name = "suit_validator"
version = "0.1.0"
edition = "2024"

[features]
# pure no_alloc
default = []
# required for host building
std = []
host = ["std"]
# Not yet implemented
alloc = ["minicbor/alloc", "minicbor/half"]
defmt = ["dep:defmt"]

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies]
cose_minicbor = { version = "0.1.0", path = "../cose_minicbor"}
suit_cbor = { version = "0.1.0", path = "../suit_cbor"}

bitflags = { version = "2.9.4", default-features = false, features = ["serde"] }

defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.1", default-features = false }
hex-literal = { version = "1.0.0", default-features = false }

cbor-diag = { version = "0.1.12", default-features = false }
cbor-macro = { version = "0.1.0", default-features = false }
cboritem = { version = "0.1.3", default-features = false }
minicbor = { version = "2.1.1", default-features = false, features = ["derive"] }
minicbor-adapters = { version = "0.0.8", default-features = false }

thiserror = { version = "2.0.17", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
subtle = { version = "2.6.1", default-features = false }
