[package]
name = "suit_validator"
version = "0.1.3"
edition = "2024"
authors = ["leduclean"]
description = "no_std-friendly Rust crate for decoding and verifying SUIT Manifest."
repository = "https://github.com/leduclean/suit-rs"
homepage = "https://github.com/leduclean/suit-rs"
documentation = "https://docs.rs/suit_validator"
license = "MIT"
keywords = ["cbor", "cose", "no_std", "iot", "embedded"]
categories = ["embedded", "cryptography", "parsing", "security"]
readme = "README.md"

[features]
# pure no_alloc
default = ["default_crypto"]

# required for host building
std = []
host = ["std"]
# Not yet implemented
alloc = ["minicbor/alloc", "minicbor/half"]
defmt = ["dep:defmt"]
default_crypto = ["cose_minicbor"]

[dev-dependencies]
rusty-hook = "^0.11.2"
cbor-diag = { version = "0.1.12", default-features = false }
cbor-macro = { version = "0.1.0", default-features = false }
cboritem = { version = "0.1.3", default-features = false }
hex-literal = { version = "1.0.0", default-features = false }

[dependencies]
cose_minicbor = { version = "0.1.1", optional = true}
suit_cbor = { version = "0.1.1"}

bitflags = { version = "2.9.4", default-features = false, features = ["serde"] }

defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.1", default-features = false }

minicbor = { version = "2.1.1", default-features = false, features = ["derive"] }
minicbor-adapters = { version = "0.0.8", default-features = false }

thiserror = { version = "2.0.17", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
subtle = { version = "2.6.1", default-features = false }
